--- a/not-posts/Alts/0x/0x.md
+++ b/not-posts/Alts/0x/0x.md
@@ -1,28 +1,28 @@
 ---
 layout: page
 title: How to Buy 0x Cryptocurrency
-seo_title: "2 Methods to Buy 0x Cryptocurrency - Credit Card and Bank"
+seo_title: "How to Buy 0x Cryptocurrency - Credit Card or Bank Transfer"
 permalink: /0x/
 ---
 
 
 ## How to Buy 0x with Credit Card and Debit Card
 
-There is currently only one method of buying 0x with credit and debit cards. This is by converting your currency into Bitcoin, and then converting Bitcoin into 0x. The best exchange to get 0x on in my opinion is [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}. Look below for our tutorial on how to buy 0x!
+There is currently only one method of buying 0x with a credit or debit card. This is to convert currency into Bitcoin, then converting Bitcoin into 0x. The most user-friendly exchange is [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}. Look below for our tutorial on how to buy 0x!
 
 ## How to Buy 0x with Bank Transfer
 
-Just like credit and debit cards, there is one method of buying 0x with a bank transfer or wire. This is done by converting Bitcoins purchased through a bank transfer into 0x, on an exchange such as [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}. All will be explained below, with clear pictures and steps!
+there is only one method of buying 0x with a bank transfer or wire: by converting Bitcoin into 0x, on an exchange like [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}. See our clear step-by-step below!
 
 ## Method 1 - USD/EUR -> BTC -> 0x
 
 
-## Step 1: Buy Bitcoin if you Don’t have Some Already.
+## Step 1: Buy Bitcoin
 
-There are several exchanges to buy Bitcoin on. We reccomend [Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004){:target="_blank"}, [Coinmama](https://www.coinmama.com/?ref=buyaltcoinsworldwideio){:target="_blank"}, or [BitPanda](https://www.bitpanda.com/?ref=7989064235904733469){:target="_blank"}. Each of these exchanges have their advantages. Coinbase is the most beginner friendly while Coinmama is great for credit and debit transactions as it has very high purchase limits and instant delivery. BitPanda is great for people in Europe and has a 5% fee on credit and debit purchases. In this example, we are going to use coinbase. If you purchase over $100 of Bitcoin through the following link, you will recieve an extra $10 BTC for FREE! Create an account [on Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004){:target="_blank"} if you don’t have one already and then add your payment method. Coinbases signup process may take some time, but this ensures security for customers. Click the Buy/Sell tab on the top/middle of your screen. From this page, you can easily purchase Bitcoin, Litecoin, and Ethereum. All of these can be converted into 0x on exchanges such as [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}, but for the purposes of this tutorial we will use bitcoin. 
+There are several exchanges through which you can buy Bitcoin. [Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004){:target="_blank"}, [Coinmama](https://www.coinmama.com/?ref=buyaltcoinsworldwide){:target="_blank"}, or [BitPanda](https://www.bitpanda.com/?ref=7989064235904733469){:target="_blank"} are the easiest to use. Coinbase is the most beginner friendly while Coinmama is great for credit or debit transactions as it has higher purchase limits and quick delivery. BitPanda is great (it only works in Europe) and has a 5% fee on credit or debit purchases. We will use Coinbase in this example. Also, if you purchase over $100 of Bitcoin through the following link, you will receive an extra $10 BTC for FREE! Create an account [on Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004){:target="_blank"} if you don’t have one already and then add your payment method. Coinbases signup process may take some time, but this ensures security for customers. Click the Buy/Sell tab on the top/middle of your screen. From this page, you can easily purchase Bitcoin, Litecoin, or Ethereum. All of these cryptocurrencies can be converted into 0x on exchanges such as [Binance](https://www.binance.com/?ref=18991911){:target="_blank"}, but for this tutorial we will use Bitcoin.
 
 
-## Fiat to Bitcoin Exchanges 
+## Fiat (Cash) to Bitcoin Exchanges
 
  {% include buychart.html %}
 
@@ -31,9 +31,9 @@ There are several exchanges to buy Bitcoin on. We reccomend [Coinbase](https://w
 
 
 
-After hitting Confirm Buy, we are ready to go top the next step! I highly recommend setting up two-factor authentication on all exchanges. Two factor authentication combines two different components to ensure the real user is trying to access the account. 
+After hitting Confirm Buy, you are finished with this step! Next will be transferring the Bitcoin to a 0x exchange. Also, at this point, we strongly suggest setting up two-factor authentication (2FA) on all exchanges. Two factor authentication  combines two different verification methods to ensure the real user is trying to access the account.
 
-## Bitcoin to 0x Exchanges 
+## Bitcoin to 0x Exchanges
 <table class="basic-table" align="center">
  <tr>
   <th>Exchange</th>
@@ -56,46 +56,44 @@ After hitting Confirm Buy, we are ready to go top the next step! I highly recomm
 
 ## Step 2: Transfer your Bitcoin
 
-After aquiring Bitcoin, you will need to move it to an exchange that has BTC/ZRX pairs. My favorite is [Binance](https://www.binance.com/?ref=18991911){:target="_blank"} due to its simple interface and good customer support. Click the send button on Coinbase as seen in red highlight in the picture below. You will be asked for the recipients wallet adress. You will want to enter your Binance Bitcoin adress, which you can find by going to the Funds tab on the Binance navigation bar and then clicking "Deposits Withdrawls". Once on this screen, you will see a list of coins. Scroll down to Bitcoin, and hit the plus sign. This is the address you will copy and paste into Coinbase. Click send on Coinbase, and wait 15-30 minutes for your BTC to arrive. 
+Once you have Bitcoin, you will need to move it to an exchange that has BTC/ZRX pairs. [Binance](https://www.binance.com/?ref=18991911){:target="_blank"} is hugely popular due to its intuitive interface and solid customer support. Click the send button on Coinbase as seen in red highlight in the picture below. You will be asked for the recipient's wallet address. Enter your Binance Bitcoin address, which you can find by going to the "Funds" tab on the Binance navigation bar, then clicking "Deposits Withdrawals". Once on this screen, you will see a list of coins. Scroll down to Bitcoin, and hit the "Deposit" button. Copy the address that appears and paste into Coinbase. Click send on Coinbase, and wait 15-30 minutes for your BTC to arrive.
 
 ![Coinbasehome](/img/Send1.png){: .medium-pic}
 ![binance](/img/binancedeposit.png){: .medium-pic}
 ![Binance](/img/binancedeposit2.png){: .medium-pic}
-![Coinbasehome](/img/Send2.png){: .medium-pic} 
+![Coinbasehome](/img/Send2.png){: .medium-pic}
 ![Coinbasehome](/img/Send3.png){: #biggerpicture}
 
 
-## Step 3: Buy some 0x!
+## Step 3: Buy 0x on Binance
 
-After your Bitcoin arrives, you will have a balance to purchase 0x with. Go to the [ZRX/BTC page](https://www.binance.com/trade.html?symbol=ZRX_BTC) and you will see a box that says Buy 0x. In the box, enter a price you are comfortable buying 0x at. To get a good idea, you can check the order book on either side.
+After your Bitcoin arrives, you will have a BTC balance with which to purchase 0x. Go to the [ZRX/BTC page](https://www.binance.com/trade.html?symbol=ZRX_BTC) and you will see a box that says Buy 0x. In the box, enter the price with which you are comfortable buying 0x. To get a good idea, you can check the order book on either side of the console.
 
 ![Buy0x](/img/buyzrx.png){: .medium-pic}
 
 ## How to Buy 0x with PayPal
 
-Due to Paypal's chargeback feature, buying 0x with Paypal takes a few extra steps. The exchange [VirWoX](https://www.virwox.com?r=22aa25){:target="_blank"} allows you to convert paypal balance into Bitcoin. [Read our tutorial on this conversion](/buy-bitcoin/paypal/). Once you have obtained Bitcoin, you can send it to [Binance](https://www.binance.com/?ref=18991911) just like the above example!
+Due to Paypal's chargeback feature, buying 0x with Paypal requires one extra step. The exchange [VirWoX](https://www.virwox.com?r=22aa25){:target="_blank"} allows you to convert your Paypal balance into Bitcoin. [Check out this tutorial on this conversion](/buy-bitcoin/paypal/). Once you have Bitcoin, you can send it to [Binance](https://www.binance.com/?ref=18991911) just like the above example.
 
 
 ## Can I Buy 0x on Coinbase?
 
-At the time of this writing, [Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004) does not sell 0x. In order to obtain 0x you can purchase Bitcoin on Coinbase, and then send it to [Binance](https://www.binance.com/?ref=18991911){:target="_blank"} where 0x is sold!
+At the time of this writing, [Coinbase](https://www.coinbase.com/join/53bc38a3b11f6623df000004) does not sell 0x. In order to obtain 0x you can purchase Bitcoin on Coinbase, and then send it to [Binance](https://www.binance.com/?ref=18991911){:target="_blank"} where you can buy 0x!
 
-## Step 4: How to Store you 0x, Securely!
+## Step 4: How to Store 0x Securely
 
-0x is a coin that runs on the Ethereum Blockchain, which means that it can be stored on [myEtherWallet](https://www.myetherwallet.com/). 
+0x is a coin that runs on the Ethereum Blockchain, which means that it can be stored on [myEtherWallet](https://www.myetherwallet.com/).
 
-To start using myEtherWallet, you will need to come up with a secure password. At the minimum, your password should be 9 characters long. After entering a password, press create new wallet. You will be taken to this screen where it asks to download a keystore file.
-This keystore file is an encrypted private key, that gives you access to your funds. Please make a backup of this file, by storing another copy of it on a USB or other storage device. If you lose this, it is very difficult to recover your coins. 
+To start using myEtherWallet, you will need to come up with a secure password. Your password should be at least 9 characters long. After entering a password, click "create new wallet". You will be taken to this screen where it asks to download a keystore file.
+A keystore file is an encrypted private key, that gives you access to your funds. Please make a backup of this file, by storing another copy of it on a USB or other storage device. If you lose this, it is very difficult to recover your coins.
 
 ![0x](/img/ethpass.png){: .medium-pic}
 ![0x](/img/keystore.png){: .medium-pic}
 
-After clicking "I understand", it will ask you show you your private key, that is un encrypted. You can print a paper wallet through the website if you would like. A paper wallet is a document that contains all the neccesary data to access your cryptocurrency. Usually containing QR Codes and your private keys.
+After clicking "I understand" it will show you your unencrypted private key. If you prefer, you can print a paper wallet through the website. A paper wallet is a document that contains all the data necessary to access your cryptocurrency, usually containing QR Codes and your private keys.
 
-
-Next, it will ask you how you would like to access your wallet. We just downloaded our encrypted private key, so we will access it using this. Press "Keystore/JSON File", and select the encrypted private key file you just downloaded. Press unlock and we are pretty much done! Your public address will be shown below. This is where you can send your ERC-20 Coins. ERC-20 Coins are any cryptocurrency that runs on the ethereum blockchain. This includes coins such as 0x, Adex, and Decentraland. 
+Next, myEtherWallet will ask you how you would like to access your wallet. You will access the wallet using the newly-downloaded encrypted private key. Click "Keystore/JSON File", and select the encrypted private key file you just downloaded. Press "unlock" and your public address will be displayed. This address is where you can send your ERC-20 Coins. ERC-20 Coins are any cryptocurrency that runs on the Ethereum blockchain. This includes coins such as 0x, Tron, and OmiseGo.
 
 ## What is the Circulating Supply of 0x?
 
-At the time of this writing, there is a circulating supply of 481,119,279 0x. This will eventually reach the cap of 1,000,000,000 0x.	
-
+At the time of this writing, there is a circulating supply of 496,487,279 0x. This will eventually reach the cap of 1,000,000,000 0x.
